## Process this file with automake to produce Makefile.in

INCLUDES = \
	-DPACKAGE_DATA_DIR=\""$(datadir)"\" \
	-DPACKAGE_LOCALE_DIR=\""$(prefix)/$(DATADIRNAME)/locale"\" \
	@PACKAGE_CFLAGS@

bin_PROGRAMS = projet6

projet6_SOURCES = \
	main.c \
	support.c support.h \
	interface.c interface.h \
	callbacks.c callbacks.h \
	yassAjoutRegister.c yassAjoutRegister.h \
	yassVerifLogin.c yassVerifLogin.h \
	fonctions.c fonctions.h

projet6_LDADD = @PACKAGE_LIBS@ $(INTLLIBS)

